minor alignment corrections

--- a/css/index.css
+++ b/css/index.css
@@ -133,14 +133,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Copse', serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'NBI', 'Pro Bold', sans-serif;
+  font-family: 'Copse', serif;
 }
 h1 {
   font-size: 4rem;
